=== 0.4.3 / 2011-06-20

* Bugfix:
  * Yanked 0.4.2 release...this release fixes a mistake tests did not
    catch...no features other than that on top of 0.4.2

=== 0.4.2 / 2011-06-20

* Minor enhancements:
  * Updates added style for logo image in plugin settings to reflect
    the size it will render as within a PDF.

* Bugfix:
  * Fixed the issue with relative links not working. All links will point
    to URLs for the time-being (vs in-document chapter links), as the
    anchor-tag-to-chapter-link conversion doesn't seem to be working for
    some reason.  [closes #16]

=== 0.4.1 / 2011-06-19

* New features:
  * 'Logo' support. Admins can add the URL of an image on the plugin
    configuration page. The logo will show up on the top-right corner
    of the first page of all exported PDFs. [closes #15]
  * Converted settings page to fully-support localization. [closes #14]

* Minor enhancements:
  * Style updates for <pre> & <img> tags (thanks, @roykolak!)

=== 0.4.0 / 2011-06-18

* New features:
  * Simplified customizating styles of of exported PDFs. Added ability to
    insert custom CSS and JavaScript into the DOM before the PDF is
    rendered [closes #12]
  * Added support for images in wiki pages to be exported in PDFs [closes #10]
    (Thanks to @roykolak for the code review!)
  * Added support for rending the HTML used to create the PDF by passing
    "as_html=true" in as a URL param (eg: /Page.pdf?as_html=true) [closes #9]
  * Added nokogiri as a dependency to get around requests for protected
    assets (images, etc) (see issue #10 for details)

* Minor enhancements:
  * Fixed image-sizing issue when resolution of image is wider than
    the exported PDF [closes #11]

=== 0.3.0 / 2011-06-13

* New features
  * Added header/footer support [closes #2]
  * Implemented 'footer_enabled' and 'header_enabled' settings to
    control whether footers/headers are included [closes #3]
  * Added 'dynamic' content which can be used to customize the