@@ -1,3 +1,13 @@
+=== NEXT
+
+* Minor enhancements:
+
+  * Added hook listener so a "PDF" link is added to the bottom of
+    project wiki pages. Requires a 1-line patch outlined/proposed
+    "here":https://www.chiliproject.org/issues/488 to work. You can
+    apply it yourself manually if you like until the patch is
+    (hopefully) accepted.
+
 === 0.4.3 / 2011-06-20
 
 * Bugfix:
